wrapped image in a new div to fix positioning

--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ p{
     padding: 30px;
 }
 
+.image-div{
+    height: 275px;
+    width: 100%;
+}
+
 img{
     width: 400px;
     height: 400px;
